<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.buzon.workaholic.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="Map"
        android:text="@string/button_commute"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="278dp"
        android:layout_height="55dp"
        android:layout_marginTop="203dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="Map"
        android:text="@string/button_car"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#1c1c2c"
        android:onClick="Map"
        android:text="@string/button_uber"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.031"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:background="#009e35"
        android:onClick="Map"
        android:text="@string/button_grab"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/holo_purple"
        android:onClick="Alarm"
        android:text="@string/button_alarm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_end="67dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="345dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="205dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="205dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="Emergency"
        android:text="@string/button_emergency"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        app:layout_constraintHorizontal_bias="0.503" />

</android.support.constraint.ConstraintLayout>
